[package]
version = "0.1.0"
name = "pompei"
repository = "https://github.com/bjacotg/pompei"
authors = ["Bastien Jacot-Guillarmod <bjacotg@gmail.com>"]
description = "Implementation of Santorini"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2024"

[dependencies]
itertools = "0.10"
ratatui = { version = "0.29.0", features = ["crossterm"]}
crossterm = "0.28"
thiserror = "2.0"
