[package]
version = "0.1.0"
name = "pompei"
repository = "https://github.com/bjacotg/pompei"
authors = ["Bastien Jacot-Guillarmod <bjacotg@gmail.com>"]
description = "Implementation of Santorini"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"]}
crossterm = "0.28"
thiserror = "2.0"
rand = "0.9.1"
itertools = "0.14.0"
googletest = "0.14.0"
